all data showing on hover, only need to fix overflow and tile sizing

--- a/src/index.css
+++ b/src/index.css
@@ -45,48 +45,73 @@
 
 #air-tiles {
   display: flex; 
-   
-  
+  padding-left: 20px; 
+     
   flex-direction: row !important;
   align-items: center !important;
   justify-content: center;
   /* justify-content: space-evenly; */
 
-  
+  word-wrap: break-word;
   position: relative;
   width: 100%;
   height: 200px;
   margin: 15px auto;
+  border-radius: 8px; 
+  box-shadow: 0 -1px 4px 0, 0 3px 6px 0 rgba(25, 32, 36, 0, 16) rgba(25, 32, 36, 0, 04); 
   
-  box-shadow: 0 -1px 4px 0, 0 3px 6px 0 rgba(225, 32, 36, 0, 16) rgba(25, 32, 36, 0, 04); 
- 
-  /* border: 1px solid #363f45; */
+  
 
  }
-
-
- 
  
  #air-tiles > img{
   width:40px;
   height: 40px;
-    
 }
 
 
 /* air tiles inactive */
-#air-tiles > p{
+
+#info-box {
+  display: flex;
+  flex-direction: column !important;
+  margin-left: 10px;
+}
+
+#info-box > p {
   font-family: Helvetica;
   color:#192024;
   font-weight: bold;
   font-size: 16px;
-  margin-left: 10px;
-  margin-top: 15px;
    
+  margin-top: 15px;
+  word-wrap: break-word;
 
   
 }
+/*air tiles active */
 
+#hover-box {
+  display: none;
+  align-self: flex-end;
+  justify-self: center;
+}
+
+#air-tiles:hover #hover-box {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none; 
+  padding: 0; /* Remove padding */
+  margin: 0; /* Remove margins */
+
+  
+
+  font-size: 14px;
+  font-weight: normal; 
+  color: #5a6872
+}
+
+/* border: 1px solid #363f45; */
 
 /* air tiles active */
 
